# ChemputerSoftware

./: .gitignore  readme.md  setup.cfg
client/: chempiler_client.py
docs/: conf.py
src/chempiler/: __init__.py
src/chempiler/core/: chempiler.py
src/chempiler/modules/pv_api/: Chemputer_Device_API.py  pump_setup.py  valve_setup.py
src/chempiler/modules/serial_labware/Heidolph_MR_Hei_Connect/: Heidolph_MR_Hei_Connect.py
src/chempiler/modules/serial_labware/Heidolph_RZR_2052_control/: Heidolph_RZR_2052_control.py
src/chempiler/modules/serial_labware/Huber_Petite_Fleur/: Huber_Petite_Fleur.py
src/chempiler/modules/serial_labware/IKA_RET_Stirrer/: IKA_RET_Control_Visc.py
src/chempiler/modules/serial_labware/IKA_RV/: IKA_RV10.py
src/chempiler/modules/serial_labware/IKA_microstar_75/: IKA_microstar_75.py
src/chempiler/modules/serial_labware/JULABO_CF41/: JULABO_CF41.py
src/chempiler/modules/serial_labware/SerialDevice/: serial_labware.py
src/chempiler/modules/serial_labware/Vacuubrand/: Vacuubrand_CVC_3000.py
src/chempiler/tools/: chempiler_setup.py  cmd_execution.py  vlogging.py
src/chempiler/tools/module_execution/: auto_column.py  chiller_execution.py  pump_execution.py  vacuum_execution.py
src/chempiler/tools/parsing/: ChASM_lexer.py  ChASM_parser.py
