##########################
# Setup.py Configuration #
##########################
[metadata]
name = chempiler
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown

# Search tags
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =

[options]
install_requires =
    networkx==1.10
    ply>=3.10
    pyserial>=3.3
    numpy>=1.13.1
    opencv-python>=3.1.4

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
